# extropian-core

./: CMakeLists.txt  LICENSE  README.md
include/exd/: ext.hpp
include/exd/core/: config.hpp  macros.hpp  namespace.hpp  units.hpp
include/exd/ecs/: component.hpp  entity.hpp  registry.hpp  system.hpp
include/exd/math/: mat4.hpp  quat.hpp  vec3.hpp
include/ext/: ext.hpp
include/ext/core/: config.hpp  namespace.hpp
include/ext/ecs/: component.hpp  entity.hpp  registry.hpp  system.hpp
include/ext/math/: mat4.hpp  quat.hpp  vec3.hpp
src/core/: allocator.cpp  config.cpp  event.cpp  logging.cpp  plugin.cpp  serialization.cpp  units.cpp
src/ecs/: registry.cpp
src/geom/: primitives.cpp  spatial.cpp
src/math/: mat4.cpp  vec3.cpp
